--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
 /*  your css code here. If applicable */
+body{
+	background-image:url('https://storage.googleapis.com/acciojob-open-file-collections/center-image.png')
+}
+
+#center{
+	text-align:center;
+}
